--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,14 +26,13 @@ jobs:
           python-version: "3.10"
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
           pip install flake8 pytest
       - name: Test with pytest
         run: |
-          Unittest_circle.py
-          Unittest_rectangle.py
-          Unittest_square.py
-          Unittest_triangle.py
+          coverage run Unittest_circle.py
+          coverage run Unittest_rectangle.py
+          coverage run Unittest_square.py
+          coverage run Unittest_triangle.py
       - name: Tests report
         run: coverage report
 
