--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,8 @@ jobs:
           python-version: "3.10"
       - name: Install dependencies
         run: |
-          pip install flake8 pytest
+          python -m pip install --upgrade pip
+          pip install flake8 pytest coverage
       - name: Test with pytest
         run: |
           coverage run Unittest_circle.py
