--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,9 +10,6 @@ on:
   pull_request:
     branches: [main]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   test-ubuntu:
@@ -25,9 +22,7 @@ jobs:
         with:
           python-version: "3.10"
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install flake8 pytest coverage
+        run: install pytest coverage
       - name: Test with pytest
         run: |
           coverage run Unittest_circle.py
@@ -67,17 +62,3 @@ jobs:
           coverage run Unittest_triangle.py
       - name: Tests report
         run: coverage report
-
-  deploy:
-    needs: test-ubuntu
-    runs-on: ubuntu-latest
-    env:
-      LOGIN: ${{ secrets.DOCKER_LOGIN }}
-      NAME: ${{ secrets.DOCKER_NAME }}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
