--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,10 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
+      - name: Install dependencies
+        run: |
+          python -m pip install
+          pip install pytest coverage
       - name: Test with pytest
         run: |
           coverage run Unittest_circle.py
