--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,7 @@ jobs:
           python-version: "3.10"
       - name: Install dependencies
         run: |
-          python -m pip install
-          pip install pytest coverage
+          python -m pip install pytest coverage
       - name: Test with pytest
         run: |
           coverage run Unittest_circle.py
