--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,7 @@ jobs:
         with:
           python-version: "3.10"
       - name: Install dependencies
-        run: |
-          python -m pip install pytest coverage
+        run: python -m install pytest coverage
       - name: Test with pytest
         run: |
           coverage run Unittest_circle.py
@@ -34,27 +33,16 @@ jobs:
         run: coverage report
         
   test-windows:
-    name: Run PSScriptAnalyzer on Windows
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
       - name: Install PSScriptAnalyzer module
-        shell: pwsh
-        run: |
-          Set-PSRepository PSGallery -InstallationPolicy Trusted
-          Install-Module PSScriptAnalyzer -ErrorAction Stop
-      - name: Get list of rules
-        shell: pwsh
-        run: |
-          Get-ScriptAnalyzerRule
       - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install flake8 pytest coverage
+        run: python -m pip install pytest coverage
       - name: Test with pytest
         run: |
           coverage run Unittest_circle.py
@@ -63,3 +51,4 @@ jobs:
           coverage run Unittest_triangle.py
       - name: Tests report
         run: coverage report
+        
