--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           python-version: "3.10"
       - name: Install dependencies
-        run: python -m install pytest coverage
+        run: python -m pip install pytest coverage
       - name: Test with pytest
         run: |
           coverage run Unittest_circle.py
@@ -50,4 +50,3 @@ jobs:
           coverage run Unittest_triangle.py
       - name: Tests report
         run: coverage report
-        
